--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,10 @@
 [build]
-  # Non hai una "build" vera, sono file statici
   command = "echo No build"
   publish = "."
   functions = "netlify/functions"
 
-# Proxy: /api/* → funzione serverless "api"
+# /api/* → /.netlify/functions/api/api/* (nota il doppio /api)
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
+  to   = "/.netlify/functions/api/api/:splat"
   status = 200
