agg. stazioni.json con italoCode - agg. cache, performance e sicurezza (meno chiami RFI meglio è) - agg. stato treno e categorie METRO ES EC EN ...

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,11 @@
 [functions]
   included_files = ["stazioni.json"]
 
+# Env per funzioni serverless (rate limit per IP reale)
+[functions.environment]
+  TRUST_PROXY = "1"
+  EXPOSE_ERRORS = "1"
+
 # /api/* → /.netlify/functions/api (la function api gestisce già /api/...)
 [[redirects]]
   from = "/api/*"
